# real-time-inference-ai-service

./: README.md
happy_cattle/: docker-compose.yml  readme.md
real_time_weather/: docker-compose.yml  readme.md
smart_shepherd/: docker-compose.yml  readme.md
smart_shepherd/ml_api/: Dockerfile  readme.md  requirements.txt
smart_shepherd/ml_api/app/: config.py  main.py
smart_shepherd/ml_api/app/endpoints/: health.py  notification.py  predict.py
smart_shepherd/ml_api/app/schemas/: health.py  predict.py
smart_shepherd/ml_api/app/tests/: conftest.py  test_predict_api.py
smart_shepherd/ml_api/app/utils/: postprocessor.py  preprocessor.py
smart_shepherd/ml_package/: MANIFEST.in  pyproject.toml  readme.md  requirements.txt  setup.py
smart_shepherd/ml_package/classification_model/: config.yml  pipeline.py  predict.py  train_pipeline.py
smart_shepherd/ml_package/classification_model/config/: core.py
smart_shepherd/ml_package/classification_model/datasets/: test.csv  train.csv
smart_shepherd/ml_package/classification_model/processing/: data_manager.py  validation.py
smart_shepherd/ml_package/classification_model/trained_models/: classification_model_output_v0.0.1.pkl  label_encoder_v0.0.1.pkl
smart_shepherd/ml_package/tests/: test_predict.py
